--- a/src/band.html
+++ b/src/band.html
@@ -19,10 +19,9 @@
         </section>
         <section class="band-members page-section row">
             <div class="band-members-description text-center">
-
                 <div class="band-members-descriptions-inner container-fixed">
                     <div class="row">
-                       <div class="band-member-description col-sm-6 col-xs-12">
+                       <div class="band-member-description col-xs-12">
                             <h3 class="red">Brien Sweet</h3>
                             <p class="white">Lead Vocals / Rhythm Guitar</p>
                            <div class="band-member-image-wrapper">
@@ -34,9 +33,9 @@
                                </div>
                            </div>
                            <div class="band-member-text">
-                               <p class="white"><a href="http://www.briensweet.com">Brien Sweet</a> is known around Boston as a unique quirky musician, so it's very fitting that he would take on the role of channelling David Bowie.
-                                   He's performed in original alternative rock bands <a href="http://www.saferbytheshore.com">Safer By The Shore</a> and <a href="http://wzlx.cbslocal.com/category/rock-and-roll-rumble/2015-rumble-bands/">Rock and Roll Rumble</a>
-                                    alumni <a href="http://www.bandwithouthands.com">Band Without Hands</a>.
+                               <p class="white"><a target="_blank" href="http://www.briensweet.com">Brien Sweet</a> is known around Boston as a unique quirky musician, so it's very fitting that he would take on the role of channelling David Bowie.
+                                   He's performed in original alternative rock bands <a target="_blank" href="http://www.saferbytheshore.com">Safer By The Shore</a> and <a href="http://wzlx.cbslocal.com/category/rock-and-roll-rumble/2015-rumble-bands/">Rock and Roll Rumble</a>
+                                    alumni <a  target="_blank" href="http://www.bandwithouthands.com">Band Without Hands</a>.
                                     Always eager to please any crowd, since 2008 Brien has also fronted the NH based party band <a href="http://www.recklesspartyband.com">Reckless</a>.
                                </p>
                                <p class="white">
@@ -50,7 +49,9 @@
                                </p>
                            </div>
                        </div>
-                        <div class="band-member-description col-sm-6 col-xs-12">
+                    </div>
+                    <div class="row">
+                        <div class="band-member-description col-xs-12">
                             <h3 class="red">Major Tim</h3>
                             <p class="white">Lead Guitar / Vocals</p>
                             <div class="band-member-image-wrapper">
@@ -74,7 +75,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="band-member-description col-sm-6 col-xs-12">
+                        <div class="band-member-description col-xs-12">
                             <h3 class="red">Tim Marten</h3>
                             <p class="white">Drums</p>
                             <div class="band-member-image-wrapper">
@@ -87,7 +88,7 @@
                             </div>
                             <div class="band-member-text">
                                 <p class="white">Tim has been drumming for years, most recently with Boston rockers <a target="_blank" href="https://www.youtube.com/channel/UCTLRGsrj6ByTJPtM3OwG_EQ">Feints</a>
-                                    He also fronted heavy indie-pop project <a href="https://www.youtube.com/channel/UCMYKAUv824EZgEhKASTEhRA">The Audiants</a> for many years. David Bowie’s music has been the soundtrack of his inner life for decades, and he is excited to be honoring the master with the Young Americans.</p>
+                                    He also fronted heavy indie-pop project <a target="_blank" href="https://www.youtube.com/channel/UCMYKAUv824EZgEhKASTEhRA">The Audiants</a> for many years. David Bowie’s music has been the soundtrack of his inner life for decades, and he is excited to be honoring the master with the Young Americans.</p>
                                 <p class="white">
                                     Favorite Bowie Album: Aladdin Sane
                                 </p>
@@ -96,7 +97,9 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="band-member-description col-sm-6 col-xs-12">
+                    </div>
+                    <div class="row">
+                        <div class="band-member-description col-xs-12">
                             <h3 class="red">Jake Kuss</h3>
                             <p class="white">Bass Guitar / Vocals</p>
                             <div class="band-member-image-wrapper">
@@ -120,8 +123,37 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="band-member-description col-xs-12">
+                            <h3 class="red">Allison Sigrist</h3>
+                            <p class="white">Keyboards</p>
+                            <div class="band-member-image-wrapper">
+                                <img class="fluid-img" src="images/Allison.jpg" alt="Allison"/>
+                                <div class="image-caption-wrapper">
+                                    <div class="image-caption">
+                                        <p class="white"><strong>Allison Sigrist / Keyboards</strong></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="band-member-text">
+                            <p class="white">Allison has been playing keyboards since she was a kid, when she would play her synthesizer along to her favorite songs on the radio.
+                                She then studied piano in college, but was knocked off track by a severe case of Brahms-induced tendonitis and switched her focus to bass for a while (which she currently still plays in the Queen tribute <a target="_blank" href="http://www.facebook.com/gunpowdergelatinemusic">Gunpowder Gelatine</a>).
+                                Allison has come back to keyboards in the last few years and is enjoying digging deeper into Bowie’s tunes beyond just the radio hits. She’s a huge fan of glam rock, despite outward appearances - inside she’s all glitter, velvet and feather boas.
+                                She also plays keys in the B-52’s tribute band, <a target="_blank" href="http://www.facebook.com/bikiniwhale">Bikini Whale</a> and the original synth-punk/dance-rock band <a target="_blank" href="http://pettymorals.bandcamp.com">Petty Morals</a>.</p>
+                            <p class="white">
+                                Favorite Bowie Album: Hunky Dory
+                            </p>
+                            <p class="white">
+                                Favorite Bowie Song: Changes
+                            </p>
+                            <p class="white">
+                                I managed to catch him on his last tour when he came through Boston in 2003.
+                            </p>
+                        </div>
+                    </div>
+                    </div>
                 </div>
-            </div>
         </section>
         @@include('./includes/footer.html')
     </div>
