--- a/src/media.html
+++ b/src/media.html
@@ -20,6 +20,9 @@
                 <em>Luna Tsuki</em></p>
             <div id="media-gallery-slider">
                 <div class="media-image-wrapper">
+                    <img class="fluid-img"  alt="Gallery" src="images/gallery/ThunderRoad.jpg" />
+                </div>
+                <div class="media-image-wrapper">
                     <img class="fluid-img"  alt="Gallery" src="images/gallery/OnceBrien.jpg" />
                 </div>
                 <div class="media-image-wrapper">
@@ -30,10 +33,10 @@
                 </div>
                 <div class="media-image-wrapper">
                     <img class="fluid-img"  alt="Gallery" src="images/gallery/OnceTimS.jpg" />
-                </div>  <div class="media-image-wrapper">
-                <img class="fluid-img"  alt="Gallery" src="images/gallery/OnceTimM.jpg" />
-            </div>
-
+                </div>
+                <div class="media-image-wrapper">
+                    <img class="fluid-img"  alt="Gallery" src="images/gallery/OnceTimM.jpg" />
+                </div>
                 <div class="media-image-wrapper">
                     <img class="fluid-img"  alt="Gallery" src="images/gallery/IMG_0080.jpg" />
                 </div>
@@ -149,9 +152,39 @@
             <div class="media-container">
                 <h1 class="red">"Rebel Rebel" - Live</h1>
                 <p class="white">ONCE Ballroom, Somerville MA</p>
-                <p class="white">Octover 28, 2017</p>
+                <p class="white">October 28, 2017</p>
                 <div class="embed-wrapper">
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/sJ_Kuga_KfM" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
+        <section class="media-content page-section row">
+            <div class="media-container">
+                <h1 class="red">The Young Americans with Elvana - Live</h1>
+                <p class="white">Thunder Road, Somerville MA</p>
+                <p class="white">May 19, 2018</p>
+                <div class="embed-wrapper">
+                    <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fyoungamericansbowie%2Fvideos%2F2060499384222114%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+                </div>
+            </div>
+        </section>
+        <section class="media-content page-section row">
+            <div class="media-container">
+                <h1 class="red">Space Oddity - Live</h1>
+                <p class="white">Midway Cafe, Jamaica Plain MA</p>
+                <p class="white">August 17, 2018</p>
+                <div class="embed-wrapper">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/rPVTVPUvhNE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
+        <section class="media-content page-section row">
+            <div class="media-container">
+                <h1 class="red">Watch That Man - Live</h1>
+                <p class="white">ONCE Ballroom Lounge, Somerville MA</p>
+                <p class="white">October 27, 2018</p>
+                <div class="embed-wrapper">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/rUx5Rqvrjis" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
