--- a/src/gigs.html
+++ b/src/gigs.html
@@ -14,58 +14,48 @@
     @@include('./includes/mobile-menu.html')
     <div class="container-fluid">
         @@include('./includes/header.html')
-
         <section class="gigs-hero page-section row">
             <h1 class="hero-header">Upcoming Shows</h1>
         </section>
         <section class="gigs-content page-section row">
             <div class="gig-info">
-                <h2 class="red">Elvana: Elvis Fronted Nirvana, The Young Americans Bowie Tribute</h2>
-                <p class="white">Saturday, May 19, 2018</p>
-                <p class="white">8:00 PM - 12:00 AM</p>
-
-                <p class="white">Thunder Road Music Club and Rock & Roll Bistro, Somerville, MA
-                    <a class="block map-link" target="_blank" href="https://www.google.cm/maps/place/Thunder+Road/@42.3816553,-71.1000674,15z/data=!4m2!3m1!1s0x0:0xc985cd9f18355057?sa=X&ved=0ahUKEwin0azI5ZbaAhVm0oMKHbjuByMQ_BIIfzAK">Map</a>
-                </p>
-                <a class="block facebook-link" href="https://www.facebook.com/events/312380189265954/">Facebook Event</a>
-                <p class="white">The band that's "got your mother in a whirl, she's not sure if you're a boy or a girl". Performing a selection of Bowie dance floor favorites and sing-a-longs. Come early and "freak out in a moonage daydream" with the Young Americans.</p>
-                <a class="buy-ticket-link" target="_blank" href="https://www.ticketweb.com/event/elvana-elvis-fronted-nirvana-tribute-thunder-road-tickets/7917345?REFERRAL_ID=twfb">Buy Tickets</a>
-            </div>
-            <div class="gig-info">
-                <h2 class="red">Bowie Tribute Night at The Jetty</h2>
-                <p class="white">Friday, June 8, 2018</p>
+                <h2 class="red">David Bowie Tribute Night</h2>
+                <p class="white">Friday, July 12, 2019</p>
                 <p class="white">9:00 PM - 12:00 AM</p>
-
-                <p class="white">The Jetty, Marshfield, MA
-                    <a class="block map-link" target="_blank" href="https://www.google.com/maps/place/The+Jetty/@42.0914423,-70.6466067,17z/data=!3m1!4b1!4m5!3m4!1s0x89e4a7caa3bfca1d:0xe8a0fd6cadab4319!8m2!3d42.0914423!4d-70.644418">Map</a>
+                <a class="block facebook-link" target="_blank" href="https://www.facebook.com/events/384229028975773/">Facebook Event</a>
+                <p class="white">Thunder Road Music Club, Somervile, MA
+                    <a class="block map-link" target="_blank" href="https://www.google.com/maps/place/Thunder+Road/@42.3816553,-71.1022561,17z/data=!3m1!4b1!4m5!3m4!1s0x89e37734f6effeef:0xc985cd9f18355057!8m2!3d42.3816553!4d-71.1000674">Map</a>
                 </p>
-                <a class="block facebook-link" href="https://www.facebook.com/events/165764227356262/">Facebook Event</a>
-                <p class="white">David Bowie tribute band performs all the classics and more, allllll night! You want the Young Americans!</p>
-            </div>
-            <div class="gig-info">
-                <h2 class="red">David Bowie Tribute Band at ZuZu</h2>
-                <p class="white">Thursday, June 14, 2018</p>
-                <p class="white">10:00 PM - 1:00 AM</p>
-
-                <p class="white">ZuZu, Cambridge, MA
-                    <a class="block map-link" target="_blank" href="https://www.google.cm/maps/place/Zuzu/@42.3637732,-71.1036287,17z/data=!3m1!4b1!4m5!3m4!1s0x89e377546e04d71f:0x498f612b3b61fee3!8m2!3d42.3637732!4d-71.10144">Map</a>
-                </p>
-                <a class="block facebook-link" href="https://www.facebook.com/events/213877202680476/">Facebook Event</a>
-                <p class="white">David Bowie Tribute Band playing all your Bowie favorites!</p>
-            </div>
-            <div class="gig-info">
-                <h2 class="red">Bowie Tribute Band at Midway</h2>
-                <p class="white">Friday, August 27, 2018</p>
-                <p class="white">9:00 PM - 12:00 AM</p>
-
-                <p class="white">Midway Cafe, Jamaica Plain, MA
-                    <a class="block map-link" target="_blank" href="https://www.google.cm/maps/place/Midway+Caf%C3%A9/@42.3062261,-71.1250491,14z/data=!4m5!3m4!1s0x89e379664a6752dd:0x4028d8d8cbfed60d!8m2!3d42.3062261!4d-71.1075396">Map</a>
-                </p>
-                <a class="block facebook-link" href="https://www.facebook.com/events/493252694404482/">Facebook Event</a>
-                <p class="white">David Bowie Tribute Band playing all the classics and favorites!</p>
-                <a class="buy-ticket-link" target="_blank" href="http://midwaycafe.com/our/details?id=103880">Buy Tickets</a>
+                <p class="white">The Young Americans are back to deliver a live performance of Bowie favorites, rarities, and surprises. Let's Dance Magic Dance!.</p>
+                <a class="buy-ticket-link" href="https://www.ticketweb.com/event/the-young-americans-thunder-road-tickets/9647005?pl=thunderroad&fbclid=IwAR0yzP71i6zZGBDcOr2sdRxO_XA5AUCR6kgU5iUN56SVmW4lXhos8iz9mpU" target="_blank">Tickets</a>
             </div>
         </section>
+        <section class="gigs-content page-section row">
+            <div class="gig-info">
+                <h2 class="red">David Bowie Tribute Night with The Young Americans</h2>
+                <p class="white">Saturday, August 3, 2019</p>
+                <p class="white">9:00 PM - 12:00 AM</p>
+                <a class="block facebook-link" target="_blank" href="https://www.facebook.com/events/456448701776384/">Facebook Event</a>
+                <p class="white">Down the Road Beer Co., Everett, MA
+                    <a class="block map-link" target="_blank" href="https://www.google.com/maps/place/Down+the+Road+Beer+Co./@42.3970334,-71.0638394,15z/data=!4m5!3m4!1s0x0:0x1d64e3a47ca55b53!8m2!3d42.3985863!4d-71.0612645">Map</a>
+                </p>
+                <p class="white">The Young Americans perform a full night of Bowie classics and rarities. 21+</p>
+            </div>
+        </section>
+        <section class="gigs-content page-section row">
+            <div class="gig-info">
+                <h2 class="red">Bowie Tribute Night with The Young Americans</h2>
+                <p class="white">Friday, August 30, 2019</p>
+                <p class="white">10:30 PM - 1:30 PM</p>
+                <a class="block facebook-link" target="_blank" href="https://www.facebook.com/events/2244947945756398/">Facebook Event</a>
+                <p class="white">Midway Cafe, Jamaica Plain, MA
+                    <a class="block map-link" target="_blank" href="https://www.google.com/maps/place/Midway+Caf%C3%A9/@42.3062261,-71.1075396,15z/data=!4m2!3m1!1s0x0:0x4028d8d8cbfed60d?sa=X&ved=2ahUKEwi20-KEhq7iAhVmvFkKHU5KB1gQ_BIwCnoECA8QCA">Map</a>
+                </p>
+                <p class="white">Bowie tunes allllll night after 10:30.</p>
+                <a class="buy-ticket-link" href="https://midwaycafe.com/our/details?id=104690&fbclid=IwAR1zUP9b9uJ_x6daLLgra0wuDIG2Tjz6ixio_rXpOkYfq_1EVCK8iwARfQc" target="_blank">Tickets</a>
+            </div>
+        </section>
+
         @@include('./includes/footer.html')
     </div>
 </div>
