--- a/src/band.html
+++ b/src/band.html
@@ -14,9 +14,7 @@
     @@include('./includes/mobile-menu.html')
     <div class="container-fluid">
         @@include('./includes/header.html')
-        <section class="band-hero page-section row">
-            <h1 class="hero-header">The Band</h1>
-        </section>
+        <section class="band-hero page-section row"></section>
         <section class="band-members page-section row">
             <div class="band-members-description text-center">
                 <div class="band-members-descriptions-inner container-fixed">
@@ -25,7 +23,7 @@
                             <h3 class="red">Brien Sweet</h3>
                             <p class="white">Lead Vocals / Rhythm Guitar</p>
                            <div class="band-member-image-wrapper">
-                                <img class="fluid-img" src="images/Brien.jpg" alt="Brien"/>
+                                <img class="fluid-img band-member-image" src="images/Brien.jpg" alt="Brien"/>
                                 <div class="image-caption-wrapper">
                                    <div class="image-caption">
                                        <p class="white"><strong>Brien Sweet - Lead Vocals / Rhythm Guitar</strong></p>
@@ -55,7 +53,7 @@
                             <h3 class="red">Major Tim</h3>
                             <p class="white">Lead Guitar / Vocals</p>
                             <div class="band-member-image-wrapper">
-                                <img class="fluid-img" src="images/MajorTim.jpg" alt="Major Tim"/>
+                                <img class="fluid-img band-member-image" src="images/MajorTim.jpg" alt="Major Tim"/>
                                 <div class="image-caption-wrapper">
                                     <div class="image-caption">
                                         <p class="white"><strong>Major Tim - Lead Guitar / Vocals</strong></p>
@@ -79,7 +77,7 @@
                             <h3 class="red">Tim Marten</h3>
                             <p class="white">Drums</p>
                             <div class="band-member-image-wrapper">
-                                <img class="fluid-img" src="images/Tim.jpg" alt="Tim"/>
+                                <img class="fluid-img band-member-image" src="images/Tim.jpg" alt="Tim"/>
                                 <div class="image-caption-wrapper">
                                     <div class="image-caption">
                                         <p class="white"><strong>Tim Marten - Drums</strong></p>
@@ -103,7 +101,7 @@
                             <h3 class="red">Jake Kuss</h3>
                             <p class="white">Bass Guitar / Vocals</p>
                             <div class="band-member-image-wrapper">
-                             <img class="fluid-img" src="images/Jake.jpg" alt="Jake"/>
+                             <img class="fluid-img band-member-image" src="images/Jake.jpg" alt="Jake"/>
                                 <div class="image-caption-wrapper">
                                     <div class="image-caption">
                                         <p class="white"><strong>Jake Kuss - Bass Guitar / Vocals</strong></p>
@@ -111,9 +109,8 @@
                                 </div>
                             </div>
                             <div class="band-member-text">
-                                <p class="white">Jake has been playing bass semi-professionally for 6 years and The Young Americans is Jake's first band on the Boston music scene.
-                                A past avid gamer, Jake has been a Bowie fan since first hearing his songs on the PC video game "Omnikron the Nomad Soul" in  the 8th grade. Jake's previous band experiences have been
-                                in a 90's alternative rock cover band in Hartford, CT.</p>
+                                <p class="white">A past avid gamer, Jake has been a Bowie fan since first hearing his songs on the PC video game "Omnikron the Nomad Soul" in  the 8th grade. This introduced Jake
+                                to the "Hours" album, and further exploration of Bowie's catalog of music made him a huge fan</p>
                                 <p class="white">
                                     Favorite Bowie Album: Station to Station
                                 </p>
@@ -128,7 +125,7 @@
                             <h3 class="red">Allison Sigrist</h3>
                             <p class="white">Keyboards</p>
                             <div class="band-member-image-wrapper">
-                                <img class="fluid-img" src="images/Allison.jpg" alt="Allison"/>
+                                <img class="fluid-img band-member-image" src="images/Allison.jpg" alt="Allison"/>
                                 <div class="image-caption-wrapper">
                                     <div class="image-caption">
                                         <p class="white"><strong>Allison Sigrist / Keyboards</strong></p>
