--- a/src/contact.html
+++ b/src/contact.html
@@ -14,9 +14,7 @@
     @@include('./includes/mobile-menu.html')
     <div class="container-fluid">
         @@include('./includes/header.html')
-        <section class="contact-hero page-section row">
-            <h1 class="white">Contact Us</h1>
-        </section>
+        <section class="contact-hero page-section row"></section>
         <section class="contact-content page-section row">
             <div class="col-xs-12">
             <p class="white">For bookings or to contact the band please email us at:</p>
