--- a/src/media.html
+++ b/src/media.html
@@ -16,8 +16,10 @@
         @@include('./includes/header.html')
         <section class="media-hero page-section row">
             <h1 class="hero-header">Gallery</h1>
-            <p class="white photo-disclaimer"><em>All photos by <a href="https://www.otaviophoto.com/" target="_blank">Otavio Photo</a></em> and
-                <em>Luna Tsuki</em></p>
+            <p class="white photo-disclaimer"><em>All photos by <a href="https://www.otaviophoto.com/" target="_blank">Otavio Photo</a></em>
+                <em>Luna Tsuki</em> and
+                <em>Corey Roth</em>
+            </p>
             <div id="media-gallery-slider">
                 <div class="media-image-wrapper">
                     <img class="fluid-img"  alt="Gallery" src="images/gallery/ThunderRoad.jpg" />
