--- a/src/index.html
+++ b/src/index.html
@@ -25,14 +25,14 @@
              <h3 class="white text-center">David Bowie 1947-2016</h3>
          </div>
          <div class="index-hero-right col-xs-12 col-sm-4">
-
          </div>
      </section>
-       <section class="row index-secondary-hero page-section-no-border">
-           <div class="col-xs-12">
+       <section class="home-hero page-section row"></section>
+       <!--<section class="row index-secondary-hero page-section-no-border">-->
+           <!--<div class="col-xs-12">-->
 
-           </div>
-       </section>
+           <!--</div>-->
+       <!--</section>-->
       <section class="row index-description page-section-no-border">
           <!--<div class="col-xs-6 index-description-left"></div>-->
           <div class="col-xs-12 index-description-content">
