New Nigs, New Slogan, Some CSS - 2/14/2020

--- a/src/index.html
+++ b/src/index.html
@@ -24,17 +24,11 @@
              <h2 class="peach text-center">Boston's David Bowie Tribute Band</h2>
              <h3 class="white text-center">David Bowie 1947-2016</h3>
          </div>
-         <div class="index-hero-right col-xs-12 col-sm-4">
+         <div class="index-hero-right col-xs-4">
          </div>
      </section>
        <section class="home-hero page-section row"></section>
-       <!--<section class="row index-secondary-hero page-section-no-border">-->
-           <!--<div class="col-xs-12">-->
-
-           <!--</div>-->
-       <!--</section>-->
       <section class="row index-description page-section-no-border">
-          <!--<div class="col-xs-6 index-description-left"></div>-->
           <div class="col-xs-12 index-description-content">
               <h1 class="red hero-header">The Young Americans</h1>
               <p class="peach">Playing:</p>
